src/app/components/dashboard/dashboard-tile/dashboard-tile.component.scss
:host {
  display: flex;
  animation: grow 500ms;
  flex: 1;
  padding: 1em;
  border-radius: 4px;
  flex-direction: column;
  max-width: 100%;

  h2 {
    margin-top: 0;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: normal;
  }

  &:hover {
    outline: 1px solid var(--primary-color);
  }
}

